# refmacro

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: xg++-toolchain.cmake
docs/plans/: 2026-02-08-compile-time-ast-metaprogramming-design.md  2026-02-08-math-ast-implementation.md  2026-02-09-refinement-types.md  2026-02-14-steps-13-14-design.md  2026-02-14-steps-13-14-plan.md  2026-02-15-auto-defmacro-design.md  2026-02-15-auto-defmacro-impl.md  2026-02-15-clamp-general-bounds-design.md  2026-02-15-documentation-design.md  2026-02-15-documentation-plan.md  2026-02-15-refinement-type-examples-design.md  2026-02-15-typed-strip-compile-from-plan.md  2026-02-15-update-examples-defmacro-design.md  2026-02-15-update-examples-defmacro-plan.md  implementation-order.md  phase1-type-representation.md  phase2-type-environment.md  phase3-constraints.md  phase4-type-checker.md  phase5-subtype-checking.md  phase6-fm-solver.md  phase6a-fm-data-structures.md  phase6b-fm-parser.md  phase6c-fm-core.md  phase6d-fm-integer-rounding.md  phase6e-fm-validity.md  phase6f-fm-disjunction.md  phase7-strip-compile-pipeline.md  phase8-error-reporting.md
examples/: 01_hello_expr.cpp  02_custom_macro.cpp  03_math_pipeline.cpp  04_transforms.cpp  05_custom_dsl.cpp  06_control_flow.cpp  07_let_bindings.cpp  08_lisp_toolkit.cpp  CMakeLists.txt
include/refmacro/: ast.hpp  compile.hpp  control.hpp  expr.hpp  macro.hpp  math.hpp  node_view.hpp  pretty_print.hpp  refmacro.hpp  str_utils.hpp  transforms.hpp
scripts/: build_gcc.sh  run-clang-format.sh
tests/: CMakeLists.txt  test_ast.cpp  test_compile.cpp  test_control.cpp  test_expr.cpp  test_integration.cpp  test_macro_bugs.cpp  test_math.cpp  test_new_macro.cpp  test_transforms.cpp
types/: CMakeLists.txt  README.md
types/examples/: 01_basic_refinement.cpp  02_builtin_type_rules.cpp  03_custom_type_rules.cpp  04_forth_dsl.cpp  CMakeLists.txt
types/include/reftype/: check.hpp  constraints.hpp  pretty.hpp  refinement.hpp  strip.hpp  subtype.hpp  type_env.hpp  type_rules.hpp  typerule.hpp  types.hpp
types/include/reftype/fm/: disjunction.hpp  eliminate.hpp  fm.hpp  parser.hpp  rounding.hpp  solver.hpp  types.hpp
types/tests/: CMakeLists.txt  compile_fail_apply_non_function.cpp  compile_fail_bare_type_node.cpp  compile_fail_bool_arith.cpp  compile_fail_fm_rounding_f1.cpp  compile_fail_mixed_arith.cpp  compile_fail_standalone_lambda.cpp  compile_fail_typed_compile_auto_macros.cpp  compile_fail_typed_compile_invalid.cpp  compile_fail_unbound_var.cpp  compile_fail_wider_base_nonbase.cpp  test_constraints.cpp  test_fm_core.cpp  test_fm_disjunction.cpp  test_fm_parser.cpp  test_fm_rounding.cpp  test_fm_rounding_f1_regression.cpp  test_fm_solver.cpp  test_fm_tester_bugs.cpp  test_fm_types.cpp  test_integration.cpp  test_strip.cpp  test_subtype.cpp  test_tester_findings.cpp  test_type_checker.cpp  test_type_env.cpp  test_type_rules.cpp  test_types.cpp  test_types_subsystem_bugs.cpp
